Create initial box component

--- a/sources/scss/_app-component.scss
+++ b/sources/scss/_app-component.scss
@@ -2,8 +2,10 @@ $window-width:  1920px;
 $window-height: 1080px;
 
 .App {
-  &--pretty-border-box {
-    @include box-with-pretty-border($window-width, $window-height, 14px);
-  }
   position: relative;
+
+  width: $window-width;
+  height: $window-height;
+
+  box-sizing: border-box;
 }
