--- a/sources/scss/_nplist-component.scss
+++ b/sources/scss/_nplist-component.scss
@@ -10,10 +10,19 @@
   100% {color: red}
 }
 
+@keyframes redbow {
+  0% {color: red}
+  20% {color: orange}
+  40% {color: #e2888b }
+  60% {color: violet}
+  80% {color: mediumvioletred}
+  100% {color: red}
+}
+
 .NPList {
   padding-left: 1em;
   font-size: 30px;
   font-family: BungeeShade, sans-serif;
-  animation: rainbow 5s infinite;
+  animation: redbow 5s infinite;
   text-shadow: 1px 1px white;
 }
