Replace NPList component with (initial) Youtube component

--- a/sources/scss/main.scss
+++ b/sources/scss/main.scss
@@ -9,5 +9,5 @@ html, body {
 @import 'mixins';
 @import 'app-component';
 @import 'box-component';
-@import 'nplist-component';
 @import 'gif-component';
+@import 'youtube-component';
